# get_number

./: README.txt  config.yml  pyproject.toml  номера (1).txt
get_number/: config.py  main.py  settings.py
get_number/sessions/: +79697731741_session.session  +79697731741_session.session-journal  79647065646_session.session  79647065646_session.session-journal  79649452868_session.session
tests/: test_get_number.py
